2006-07-14 20:12:14  Sean Middleditch <elanthis@awesomeplay.com>

  * Make new character's HP set to the max.
  * Allow saving and loading of customized names on Objects.
  * Waffle on Scriptix string concat operator yet again; it's back
    to .. now.
  * Fixed a bug in Scriptix eval loop that would cause it continue
    evaluating a function even after an error.
  * Added a new stream operator << to Scriptix and basic stream
    support for Character and Room.  Added one example line of
    this in player.sx.
  * Stream support is not finished, as the special << @op(args)
    format is not yet handled properly.

2006-07-13 21:28:26  Sean Middleditch <elanthis@awesomeplay.com>

  * Reduce startup log messages to almost nothing.

2006-07-13 20:41:50  Sean Middleditch <elanthis@awesomeplay.com>

  * Release version 0.25.

2006-07-13 16:58:24  Sean Middleditch <elanthis@awesomeplay.com>

  * Rename Scriptix Object.setName to Object.setBaseName and
    document it better.
  * Rename Scriptix Entity.getFullName to Entity.getBaseName and
    document it better.
  * Fix NPC corpse generation to work properly.
  * Added Scriptix functions warning() and error(), like message()
    except using Log::Warning and Log::Error, respectively.

2006-07-13 16:47:04  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix some incorrect data files caused by testing.

2006-07-13 05:35:07  Sean Middleditch <elanthis@awesomeplay.com>

  * Replaced the huge disgusting 128-bit unique IDs with something
    much smaller and simpler.  Instead of generating true UUIDs,
    we now use a simple counter.  Each new entity gets a new ID
    in sequence.  However, in order to avoid duplicate IDs caused
    by crashes, the system makes ID reserves.  It pre-allocates
    1024 IDs (this number can easily be changed, probably will be
    changed) and saves to disk this reservation.  So, if AweMUD
    crashes between allocating an ID and updating data/uniqid,