@@ -1,5 +1,5 @@
 # Player file: Admin
-# Timestamp: Fri Jul 14 16:09:14 2006
+# Timestamp: Sat Jul 15 09:41:12 2006
 # 
 
 uid = $1
