@@ -1,2 +1,2 @@
-current = "2456/05/07 05.2604"
+current = "2456/05/07 05.2605"
 # vim: set shiftwidth=2 tabstop=2 expandtab:
